Enable T430 Origin Bluetooth USB port, and fix typo

--- a/EFI/OC/Kexts/USBMap.kext/Contents/Info.plist
+++ b/EFI/OC/Kexts/USBMap.kext/Contents/Info.plist
@@ -172,7 +172,7 @@
 						<integer>0</integer>
 						<key>name</key>
 						<string>OriginBluetooth</string>
-						<key>#port</key>
+						<key>port</key>
 						<data>BAAAAA==</data>
 					</dict>
 					<key>PRT5</key>
