--- a/EFI/OC/Kexts/USBMapLegacy.kext/Contents/Info.plist
+++ b/EFI/OC/Kexts/USBMapLegacy.kext/Contents/Info.plist
@@ -176,7 +176,7 @@
 					<dict>
 						<key>name</key>
 						<string>OriginBluetooth</string>
-						<key>#port</key>
+						<key>port</key>
 						<data>BAAAAA==</data>
 						<key>portType</key>
 						<integer>0</integer>
